# Vehicle-Insurance

./: .dockerignore  .gitignore  Crashcourse.md  Files_info  Files_info.md  README.md  app.py  demo.py  log_exp_checker.py  project_flow.txt  pyproject.toml  setup.py  template.py  text
.github/workflows/: aws.yaml
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src.egg-info/: PKG-INFO  SOURCES.txt
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/exception/: __init__.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
venv1/: pyvenv.cfg
venv1/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  undill
