[project]
# Basic information about the project
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Shivansh", email = "shivanshkale17@gmail.com"}]

[tool.setuptools]
# Automatically find all Python packages (folders with __init__.py)
packages = {find = {}}

[tool.setuptools.dynamic]
# Read project dependencies from requirements.txt
dependencies = {file = "requirements.txt"}